--- a/Todolis/Views/Base.lproj/Main.storyboard
+++ b/Todolis/Views/Base.lproj/Main.storyboard
@@ -10,6 +10,45 @@
     </dependencies>
     <scenes>
         <!--Todolis-->
+        <scene sceneID="So5-dG-ldM">
+            <objects>
+                <tableViewController id="tXh-Ca-JQD" customClass="CategoryViewController" customModule="Todolis" customModuleProvider="target" sceneMemberID="viewController">
+                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" id="u2t-WM-oUW">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <prototypes>
+                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="CategoryCell" id="Zxi-WI-VXf">
+                                <rect key="frame" x="0.0" y="28" width="375" height="44"/>
+                                <autoresizingMask key="autoresizingMask"/>
+                                <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="Zxi-WI-VXf" id="AP4-Xo-ObY">
+                                    <rect key="frame" x="0.0" y="0.0" width="375" height="43.5"/>
+                                    <autoresizingMask key="autoresizingMask"/>
+                                </tableViewCellContentView>
+                            </tableViewCell>
+                        </prototypes>
+                        <connections>
+                            <outlet property="dataSource" destination="tXh-Ca-JQD" id="sdC-p0-dtE"/>
+                            <outlet property="delegate" destination="tXh-Ca-JQD" id="cbH-eS-1kq"/>
+                        </connections>
+                    </tableView>
+                    <navigationItem key="navigationItem" title="Todolis" id="gCs-XK-fhn">
+                        <barButtonItem key="rightBarButtonItem" systemItem="add" id="eTz-m7-HAH">
+                            <color key="tintColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                            <connections>
+                                <action selector="addButtonPressed:" destination="tXh-Ca-JQD" id="GqI-Fu-vKs"/>
+                            </connections>
+                        </barButtonItem>
+                    </navigationItem>
+                    <connections>
+                        <segue destination="oJX-ND-aoH" kind="show" identifier="goToItems" id="imE-uH-Gkz"/>
+                    </connections>
+                </tableViewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="0tt-T2-j0j" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1126" y="131"/>
+        </scene>
+        <!--Items-->
         <scene sceneID="vbk-Tw-Dzg">
             <objects>
                 <tableViewController id="oJX-ND-aoH" customClass="TodolisViewController" customModule="Todolis" customModuleProvider="target" sceneMemberID="viewController">
@@ -17,9 +56,17 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <searchBar key="tableHeaderView" contentMode="redraw" id="71o-cw-suz">
+                            <rect key="frame" x="0.0" y="0.0" width="375" height="44"/>
+                            <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
+                            <textInputTraits key="textInputTraits"/>
+                            <connections>
+                                <outlet property="delegate" destination="oJX-ND-aoH" id="r1n-Pf-wSu"/>
+                            </connections>
+                        </searchBar>
                         <prototypes>
                             <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="ToDoItemCell" id="xby-nB-jMi">
-                                <rect key="frame" x="0.0" y="28" width="375" height="44"/>
+                                <rect key="frame" x="0.0" y="72" width="375" height="44"/>
                                 <autoresizingMask key="autoresizingMask"/>
                                 <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="xby-nB-jMi" id="wEF-0R-ldD">
                                     <rect key="frame" x="0.0" y="0.0" width="375" height="43.5"/>
@@ -33,7 +80,7 @@
                             <outlet property="delegate" destination="oJX-ND-aoH" id="hth-h1-j0Y"/>
                         </connections>
                     </tableView>
-                    <navigationItem key="navigationItem" title="Todolis" id="lpU-BY-Do7">
+                    <navigationItem key="navigationItem" title="Items" id="lpU-BY-Do7">
                         <barButtonItem key="rightBarButtonItem" systemItem="add" id="J0m-Zb-r1K">
                             <color key="tintColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                             <connections>
@@ -44,7 +91,7 @@
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Y90-JX-Gdy" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1132" y="131"/>
+            <point key="canvasLocation" x="1846" y="131"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="fCT-2g-q3o">
@@ -61,7 +108,7 @@
                     </navigationBar>
                     <nil name="viewControllers"/>
                     <connections>
-                        <segue destination="oJX-ND-aoH" kind="relationship" relationship="rootViewController" id="w2U-OZ-AFk"/>
+                        <segue destination="tXh-Ca-JQD" kind="relationship" relationship="rootViewController" id="X3u-Rc-26q"/>
                     </connections>
                 </navigationController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="fn1-T1-YHd" userLabel="First Responder" sceneMemberID="firstResponder"/>
