Make almost last version with lightened colours

--- a/Todolis/Views/Base.lproj/Main.storyboard
+++ b/Todolis/Views/Base.lproj/Main.storyboard
@@ -25,6 +25,7 @@
                                     <rect key="frame" x="0.0" y="0.0" width="375" height="43.5"/>
                                     <autoresizingMask key="autoresizingMask"/>
                                 </tableViewCellContentView>
+                                <color key="tintColor" red="0.90384800247672881" green="0.99942404029999998" blue="0.75655704394142476" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                             </tableViewCell>
                         </prototypes>
                         <connections>
